# teensy4_shell

./: .gitignore  CMakeLists.txt  Kconfig  build.sh  burn.sh  prj.conf  readme.md  teensy40.overlay  teensy41.overlay
src/: button.c  globals.h  led.c  main.c  pin.c  sdhc.c  uart.c
